--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html>
 
 <head>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
-
     <title>Assignment 04</title>
-
     <meta charset="UTF-8">
-    <style></style>
-
-    <!-- CSS Styles-->
     <style>
         .tooltip {
             position: absolute;
@@ -26,57 +20,47 @@
 
         body {
             background-color: #f5dbf8;
-
-            /* Changed background color */
         }
 
-        h1 {
-            margin: auto;
-            width: 750px;
-            text-align: center;
-            font-family: 'Noto Sans Mono';
-            font-weight: bold;
-
-            font-size: 30px;
-            line-height: 80px;
-            color: rgb(112, 41, 99);
-        }
-
+        h1,
+        h2,
         h3 {
             margin: auto;
             width: 750px;
             text-align: center;
             font-family: 'Noto Sans Mono';
-            font-weight: regular;
-            font: size 12px;
-            color: rgb(61, 61, 60);
+        }
+
+        h1 {
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 80px;
+            color: rgb(112, 41, 99);
         }
 
         h2 {
-            margin: auto;
-            width: 750px;
-            text-align: center;
-            font-family: 'Noto Sans Mono';
             font-weight: bold;
             line-height: 12px;
             color: rgb(61, 61, 60);
         }
 
-        h4 {
+        h3 {
+            font-weight: regular;
+            font-size: 12px;
+            color: rgb(61, 61, 60);
+        }
+
+        h4,
+        p {
             margin: auto;
-            text-align: justify;
             width: 750px;
+            text-align: justify;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: rgb(112, 41, 99);
         }
 
         p {
-            margin: auto;
-            width: 750px;
-            text-align: justify;
-            text-align-last: left;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font: size 15px;
+            font-size: 15px;
         }
 
         #container {
@@ -87,258 +71,116 @@
             max-width: 1900px;
             margin: 0 auto;
             margin-top: 20px;
-
             font-size: 30px;
             line-height: 90px;
             color: rgb(112, 41, 99);
         }
+
+
+
+        svg {
+            display: block;
+            /* Ensures the SVG behaves like a block element */
+            margin: auto;
+            /* Centers the SVG within its container */
+        }
     </style>
-
-    <!--Headings-->
-    <div>
-        <h1>Assignment 4</h1>
-        <h2>Singapore Population Density</h2><br>
-
-    </div>
+</head>
 
 <body>
+    <br><br>
+    <h1>Assignment 4</h1>
+    <h2>Singapore Population Density</h2><br><br><br><br>
+    <svg width="1200" height="600"></svg>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <div id="tooltip" class="tooltip"></div>
+    <script>
+        let width = 1200, height = 600;
+        let svg = d3.select("svg")
+            .attr("viewBox", "0 0 " + width + " " + height);
 
-    </head>
+        let tooltip = d3.select(".tooltip");
 
-    <body>
-        <svg width="1900" height="600"></svg>
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        Promise.all([
+            d3.json("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/sgmap.json"),
+            d3.csv("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/population2023.csv")
+        ]).then(data => {
+            let mapData = data[0].features;
+            let popData = data[1];
+            mapData.forEach(d => {
+                let subzone = popData.find(e => e.Subzone.toUpperCase() === d.properties.Name);
+                d.popdata = subzone ? parseInt(subzone.Population) : 0;
+            });
 
-        <!--Div ID's-->
-        <div id="tooltip" class="tooltip"></div>
+            let colorScale = d3.scaleThreshold()
+                .domain([1, 20000, 40000, 60000, 80000, 100000, 120000])
+                .range([
+                    "#DEEDCF", "#BFE1B0", "#99D492",
+                    "#74C67A", "#56B870", "#39A96B",
+                    "#1D9A6C", "#188977", "#137177",
+                    "#0E4D64", "#0A2F51"
+                ]);
 
-        <script>
+            svg.append("rect")
+                .attr("width", width)
+                .attr("height", height)
+                .attr("rx", 20)
+                .attr("ry", 20)
+                .attr("fill", "#f4f9fc");
 
-            //dimensions
-            let width = 1000, height = 600;
+            let projection = d3.geoMercator()
+                .center([103.851959, 1.290270])
+                .fitExtent([[20, 20], [980, 580]], data[0]);
 
+            let geopath = d3.geoPath().projection(projection);
 
-
-            //create the viewbox
-            let svg = d3.select("svg")
-                .attr("viewBox", "0 0 " + width + " " + height)
-
-            // Define the tooltip variable to select the tooltip element
-            let tooltip = d3.select(".tooltip");
-
-            // Load external data and boot
-            Promise.all([d3.json("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/sgmap.json"),
-            d3.csv("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/population2023.csv")]).then(data => {
-
-                let mapData = data[0].features;
-                let popData = data[1];
-
-                // Merge pop data with map data
-                mapData.forEach(d => {
-                    let subzone = popData.find(e => e.Subzone.toUpperCase() == d.properties.Name);
-                    d.popdata = (subzone != undefined) ? parseInt(subzone.Population) : 0;
+            svg.append("g")
+                .attr("id", "districts")
+                .selectAll("path")
+                .data(mapData)
+                .enter()
+                .append("path")
+                .attr("d", geopath)
+                .attr("stroke", "white")
+                .attr("fill", d => colorScale(d.popdata))
+                .on("mouseover", (event, d) => {
+                    tooltip.style("opacity", 1)
+                        .html(`<strong>${d.properties.Name}</strong><br>Population: ${d.popdata.toLocaleString()}`)
+                        .style("left", `${event.pageX + 20}px`)
+                        .style("top", `${event.pageY - 20}px`);
                 })
+                .on("mouseout", () => tooltip.style("opacity", 0));
 
-                console.log(mapData);
+            let legend = svg.append("g")
+                .attr("transform", "translate(1020, 20)");
 
-                // Define inverted color range using provided hex codes
-                let colorScale = d3
-                    .scaleThreshold()
-                    .domain([1, 20000, 40000, 60000, 80000, 100000, 120000])
-                    .range([
-                        "#DEEDCF", "#BFE1B0", "#99D492",
-                        "#74C67A", "#56B870", "#39A96B",
-                        "#1D9A6C", "#188977", "#137177",
-                        "#0E4D64", "#0A2F51"
-                    ]);
+            legend.selectAll("rect")
+                .data(colorScale.range().map(color => {
+                    let d = colorScale.invertExtent(color);
+                    if (d[0] == null) d[0] = colorScale.domain()[0];
+                    if (d[1] == null) d[1] = colorScale.domain()[colorScale.domain().length - 1];
+                    return d;
+                }))
+                .enter().append("rect")
+                .attr("height", 20)
+                .attr("x", 0)
+                .attr("y", (d, i) => i * 25)
+                .attr("width", 20)
+                .attr("fill", d => colorScale(d[0]));
 
-
-
-                // Add a white rounded rectangle as background
-                svg.append("rect")
-                    .attr("width", width)
-                    .attr("height", height)
-                    .attr("rx", 20) // Rounded corner x-radius
-                    .attr("ry", 20) // Rounded corner y-radius
-                    .attr("fill", "#f4f9fc"); // White color
-                // Map and projection
-
-                let projection = d3.geoMercator()
-
-                    .center([103.851959, 1.290270])
-                    .fitExtent([[20, 20], [980, 580]], data[0]);
-
-                let geopath = d3.geoPath().projection(projection);
-
-
-
-
-                //SVG Methodchain: Adding population to proejection
-                svg.append("g")
-                    .attr("id", "districts")
-                    .selectAll("path")
-                    .data(mapData)
-                    .enter()
-                    .append("path")
-                    .attr("d", geopath)
-                    .attr("stroke", "white")
-                    .attr("fill", "grey")
-                    .attr("fill", (d) => colorScale(d.popdata))
-                    .classed("animated", true)
-
-                    // Event handlers: update tooltip relative to mouse pointer
-                    //turning on the mouuse-over fucntion
-                    .on("mouseover", (event, d) => {
-                        const centroid = geopath.centroid(d);
-                        const [x, y] = centroid;
-
-
-                        d3.select(event.currentTarget)
-                            .classed("highlighted", true)
-                            //.attr("transform",`translate(${x * (1 - scale)}, ${y * (1- scale)}) scale(${scale}, ${scale})`)
-                            .raise(); // Raise section above projection
-
-
-                        //making the mouse-over funciton link to the tooltip
-                        //d3.select(".tooltip")
-                        tooltip.style("opacity", 1)
-                            .html(`<strong>${d.properties.Name}</strong><br>Population: ${d.popdata.toLocaleString()}`)
-                            .style("display", "block")
-                            .style("left", event.pageX + 60 + "px")
-                            .style("top", event.pageY - 60 + "px");
-                    })
-                    .on("mouseout", (event, d) => {
-                        d3.select(event.currentTarget)
-                            .classed("highlighted", false)
-                            .attr("transform", "translate(0, 0) scale(1, 1)");
-
-                        d3.select(".tooltip").style("display", "none");
-                    });
-
-
-
-            })// end data
-
-        </script>
-
-        <!-- Add SVG element for legend -->
-        <svg id="legend" width="200" height="400"></svg>
-
-        <script>
-            // Define legend data (population density ranges)
-            let legendData = [
-                { color: "#DEEDCF", label: "< 1k" },
-                { color: "#BFE1B0", label: "1k - 20k" },
-                { color: "#99D492", label: "20k - 40k" },
-                { color: "#74C67A", label: "40k - 60k" },
-                { color: "#56B870", label: "60k - 80k" },
-                { color: "#39A96B", label: "80k - 100k" },
-                { color: "#1D9A6C", label: "100k - 120k" },
-                { color: "#188977", label: "120k - 140k" },
-                { color: "#137177", label: "140k - 160k" },
-                { color: "#0E4D64", label: "160k - 180k" },
-                { color: "#0A2F51", label: "> 180k" }
-            ];
-
-            // Define legend dimensions and positions
-            let legendWidth = 200,
-                legendHeight = 200,
-                legendX = 10,
-                legendY = 10,
-                legendRectSize = 18,
-                legendSpacing = 4;
-
-            // Select the legend SVG element
-            let legendSvg = d3.select("#legend");
-
-            // Append legend groups
-            let legend = legendSvg.selectAll(".legend")
-                .data(legendData)
-                .enter().append("g")
-                .attr("class", "legend")
-                .attr("transform", (d, i) => "translate(0," + i * (legendRectSize + legendSpacing) + ")");
-
-            // Append legend rectangles
-            legend.append("rect")
-                .attr("width", legendRectSize)
-                .attr("height", legendRectSize)
-                .style("fill", d => d.color);
-
-            // Append legend text
-            legend.append("text")
-                .attr("x", legendRectSize + legendSpacing)
-                .attr("y", legendRectSize - legendSpacing)
-                .text(d => d.label);
-        </script>
-
-        <!-- Add SVG element for legend -->
-        <svg id="legend" width="800" height="200"></svg>
-        <!-- Add SVG element for legend -->
-        <svg id="legend" width="800" height="200"></svg>
-
-        <script>
-            // Load external data and boot
-            Promise.all([d3.json("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/sgmap.json"),
-            d3.csv("https://raw.githubusercontent.com/Chi-Loong/HASS02.526/master/assignments/population2023.csv")]).then(data => {
-
-                // Define legend data (population density ranges)
-                let legendData = [
-                    { color: "#DEEDCF", label: "< 1k" },
-                    { color: "#BFE1B0", label: "1k - 20k" },
-                    { color: "#99D492", label: "20k - 40k" },
-                    { color: "#74C67A", label: "40k - 60k" },
-                    { color: "#56B870", label: "60k - 80k" },
-                    { color: "#39A96B", label: "80k - 100k" },
-                    { color: "#1D9A6C", label: "100k - 120k" },
-                    { color: "#188977", label: "120k - 140k" },
-                    { color: "#137177", label: "140k - 160k" },
-                    { color: "#0E4D64", label: "160k - 180k" },
-                    { color: "#0A2F51", label: "> 180k" }
-                ];
-
-                // Define legend dimensions and positions
-                let legendWidth = 800,
-                    legendHeight = 200,
-                    legendRectSize = 60,
-                    legendSpacingX = 200, // Horizontal spacing between columns
-                    legendSpacingY = 80; // Vertical spacing between legend items
-
-                // Select the legend SVG element
-                let legendSvg = d3.select("#legend");
-
-                // Append legend groups
-                let legend = legendSvg.selectAll(".legend")
-                    .data(legendData)
-                    .enter().append("g")
-                    .attr("class", "legend")
-                    .attr("transform", (d, i) => "translate(" + ((i % 3) * legendSpacingX) + "," + (Math.floor(i / 3) * legendSpacingY) + ")");
-
-                // Append legend rectangles
-                legend.append("rect")
-                    .attr("width", legendRectSize)
-                    .attr("height", legendRectSize)
-                    .style("fill", d => d.color);
-
-                // Append legend text
-                legend.append("text")
-                    .attr("x", legendRectSize / 2)
-                    .attr("y", legendRectSize + 10)
-                    .style("text-anchor", "middle")
-                    .text(d => d.label);
-            })
-        </script>
-
-        <style>
-            /* Center the legend SVG */
-            #legend {
-                display: block;
-                margin: 0 auto;
-            }
-        </style>
-
-
-
-
-    </body>
+            legend.selectAll("text")
+                .data(colorScale.range().map(color => {
+                    let d = colorScale.invertExtent(color);
+                    if (d[0] == null) d[0] = colorScale.domain()[0];
+                    if (d[1] == null) d[1] = colorScale.domain()[colorScale.domain().length - 1];
+                    return `${d[0]} - ${d[1]}`;
+                }))
+                .enter().append("text")
+                .attr("x", 30)
+                .attr("y", (d, i) => i * 25 + 15)
+                .text(d => d);
+        });
+    </script>
+</body>
 
 </html>
