--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 .on("mouseout", () => tooltip.style("opacity", 0));
 
             let legend = svg.append("g")
-                .attr("transform", "translate(1020, 20)");
+                .attr("transform", "translate(1020, 165");
 
             legend.selectAll("rect")
                 .data(colorScale.range().map(color => {
